<resources>
    <string name="app_name">DroidDemo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_search">search</string>

    <string name="s1">SYSTEM_UI_FLAG_VISIBLE</string>
    <string name="s2">INVISIBLE</string>
    <string name="s3">SYSTEM_UI_FLAG_FULLSCREEN</string>
    <string name="s4">SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN</string>
    <string name="s5">SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION</string>
    <string name="s6">SYSTEM_UI_LAYOUT_FLAGS</string>
    <string name="s7">SYSTEM_UI_FLAG_HIDE_NAVIGATION</string>
    <string name="s8">SYSTEM_UI_FLAG_LOW_PROFILE</string>
    <string name="button_dialog_entrance">对话框背景</string>
    <string name="button_ripple_entrance">水波动效</string>
    <string name="button_forbid_screenshot_entrance">禁止录屏</string>
    <string name="button_app_list_entrance">应用列表</string>
    <string name="button_various_notification_entrance">各种通知</string>
    <string name="button_scale_text_entrance">自动缩放TextView</string>
    <string name="button_spannable_string_entrance">SpannableString示例</string>

    <string name="hello_world">Hello world!</string>

    <string name="title_dashboard_menu_left">Menu</string>
    <string name="title_left">left</string>
    <string name="title_add">Add</string>

    <string name="view_flipper_str1">床前明月光</string>
    <string name="view_flipper_str2">疑是地上霜</string>
    <string name="view_flipper_str3">举头邀明月</string>
    <string name="view_flipper_str4">低头思故乡</string>

    <string name="tv_listview_title">Test ListView</string>
    <string name="tv_list_view_title">ListView</string>

    <string name="md5_hint_s">APP_MD5</string>
    <string name="sha1_hint_s">SHA1</string>
    <string name="sha256_hint_s">SHA256</string>
    <string name="effective_hint_s">有效时间</string>
    <string name="iseffective_hint_s">签名是否过期</string>
    <string name="overdue_hint_s">已过期</string>
    <string name="notoverdue_hint_s">未过期</string>
    <string name="principal_hint_s">证书发布方</string>
    <string name="version_hint_s">证书版本号</string>
    <string name="sigalgname_hint_s">证书算法名称</string>
    <string name="sigalgoid_hint_s">证书算法OID</string>
    <string name="dercode_hint_s">证书DER编码</string>
    <string name="serialnumber_hint_s">证书机器码</string>

    <string name="exchange_txt_hint"><Data><![CDATA[请使用<font color="#ff0000"><b>%1$s</b></font>牛兑换<font color="#00ff00"><b>%2$s</b></font>%3$s 上网时长]]></Data></string>

    <string name="accessibility_service_description">开启功能, 以跟踪栈顶 Activity</string>

    <string name="xuyan">序言:\n壬戌之秋，七月既望，\n苏子与客泛舟游于赤壁之下。\n清风徐来，水波不兴。\n举酒属客，诵明月之诗，歌窈窕之章。</string>

    <string name="show_image">showImage</string>
    <string name="create_file">createFile</string>
    <string name="delete_file">deleteFile</string>
    <string name="alter_file">alterFile</string>

    <string name="content_description">contentDescription</string>
    <string name="all">所有通话记录</string>
    <string name="incoming">拨入记录</string>
    <string name="outcoming">拨出记录</string>
    <string name="missed">未接记录</string>
    <string name="name_unknown">未知的</string>

    <string name="tower_of_london">The Tower of London has played a prominent role in English history. It was besieged several times and controlling it has been important to controlling the country. The Tower has served variously as an armoury, a treasury, a menagerie, the home of the Royal Mint, a public records office, and the home of the Crown Jewels of the United Kingdom. From the early 14th century until the reign of Charles II, a procession would be led from the Tower to Westminster Abbey on the coronation of a monarch. In the absence of the monarch, the Constable of the Tower is in charge of the castle. This was a powerful and trusted position in the medieval period. In the late 15th century the castle was the prison of the Princes in the Tower. Under the Tudors, the Tower became used less as a royal residence, and despite attempts to refortify and repair the castle its defences lagged behind developments to deal with artillery.</string>
    <string name="transitionChromeName">chrome</string>
    <string name="transitionTextName">text</string>
    <string name="transitionImageName">image</string>
    <string name="message_empty_layout_changes">Add an item above to get started.</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>

    <string name="singapore_decription">Singapore officially the Republic of Singapore, and often referred to as the Lion City, the Garden City, and the Red Dot, is a global city in Southeast Asia and the world\'s only island city-state. It lies one degree (137 km) north of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, with Indonesia\'s Riau Islands to the south. Singapore\'s territory consists of the diamond-shaped main island and 62 islets.</string>
    <string name="dummy">dummy</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">ƒ/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="singapore">Singapore</string>


    <string name="sample_0">着色器(Shader)</string>
    <string name="sample_1">纹理数组(Texture Array)</string>
    <string name="sample_2">二进制GL程序(Binary GL Program)</string>
    <string name="sample_3">栅栏(Fence)</string>
    <string name="sample_4">多重目标渲染(Multiple Render Target)</string>
    <string name="sample_5">VBO和IBO(VBO and IBO)</string>
    <string name="sample_6">EGL(EGL)</string>
    <string name="sample_7">矩阵变换(Matrix Transform)</string>
    <string name="sample_8">颜色混合(Color Blend)</string>
    <string name="sample_9">光照(Lighting)</string>
</resources>
