<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.jiangxin.easymarry.fragment.NotificationsFragment"
    android:paddingTop="?android:attr/actionBarSize">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical">

            <Button
                android:id="@+id/btn1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s3" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s6" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/s8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="显示屏幕状态" />

            <Button
                android:id="@+id/btn10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="显示用户信息" />

            <Button
                android:id="@+id/btn11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="显示屏幕信息" />

            <Button
                android:id="@+id/btn12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="模糊化效果" />

            <Button
                android:id="@+id/btn13"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Messanger" />

            <Button
                android:id="@+id/btn14"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="ListViewActivity" />

            <Button
                android:id="@+id/btnDialogEntrance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_dialog_entrance" />

            <Button
                android:id="@+id/btnRippleEntrance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_ripple_entrance" />

            <Button
                android:id="@+id/btnBlurEntrance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_blur_entrance" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>