<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all" />

    <Button
        android:id="@+id/btn_incoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/btn_all"
        android:text="@string/incoming" />

    <Button
        android:id="@+id/btn_outcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_all"
        android:layout_marginTop="10dp"
        android:text="@string/outcoming" />

    <Button
        android:id="@+id/btn_missed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_all"
        android:layout_alignLeft="@id/btn_incoming"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btn_outcoming"
        android:text="@string/missed" />

    <View
        android:id="@+id/line_layout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/btn_missed"
        android:background="#000000" />

    <ListView
        android:id="@+id/lv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/line_layout"
        android:clipToPadding="false"
        android:divider="#ff553311"
        android:dividerHeight="2dp"
        android:fadingEdge="none"
        android:paddingTop="10dp" />

</RelativeLayout>